--- a/main.css
+++ b/main.css
@@ -15,9 +15,14 @@ h1, p {
     width: 25%;
   }
 
+body * {
+    
+    background-color: rgba(255, 99, 71, 0.8)
+}
 body {
     background-image: url(images/giphy.gif);
     /* background-position:  */
     background-size: 100% 100%; 
     background-repeat: no-repeat;
-}
+     
+} 
