--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
 
- h1, p{ box-sizing: border-box;
-    padding: 25px;
+p { box-sizing: border-box;
+    padding: 50px;
  }
 
 * {
@@ -59,6 +59,6 @@ a:visited {
 .secondPageImg {
     background-image: url(images/joydiv.gif);
     /* background-position:  */
-    background-size: cover; 
+    background-size: 100% 100%; 
     background-repeat: no-repeat;
 }
