--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ p { box-sizing: border-box;
     font-size: 20px;
     text-align: center;
     padding:25px;
-    width: 6.66%;   
+    width: 400px;   
 }
 
   
